Feat random task (#41)
* feat: update shuffle api

* feat: update

* feat: update checker

* feat: shuffle checkers

* feat: update task checker

* feat: add guard

* feat: add guard

* feat: add task checker

* feat: update tasks

* feat: lint for precommit

* feat: add lint staged
