# src/models/taskChecker.ts
@@ -1,0 +1,22 @@
+import { Entity, CreateDateColumn, ManyToOne, Column, UpdateDateColumn, PrimaryGeneratedColumn } from 'typeorm';
+import { Mentor } from './mentor';
+import { Student } from './student';
+@Entity()
+export class TaskChecker {
+    @PrimaryGeneratedColumn() id: number;
+
+    @CreateDateColumn()
+    createdDate: number;
+
+    @UpdateDateColumn()
+    updatedDate: number;
+
+    @Column()
+    courseTaskId: number;
+
+    @ManyToOne(_ => Student)
+    student: Student | number;
+
+    @ManyToOne(_ => Mentor)
+    mentor: Mentor | number;
+}
